fix label contrast

--- a/assets/css/overrides.css
+++ b/assets/css/overrides.css
@@ -1,4 +1,8 @@
-body, input, select, textarea, label {
+body, input, select, textarea {
+    color: rgba(255, 255, 255, 0.85);
+}
+
+input[type="checkbox"] + label {
     color: rgba(255, 255, 255, 0.85);
 }
 
